--- a/app/views/admin/products/_variant_fields.html.erb
+++ b/app/views/admin/products/_variant_fields.html.erb
@@ -1,80 +1,63 @@
-<div class="border border-neutral rounded-md p-4 my-4 js-variant-fields">
-  <div class="grid grid-cols-2 gap-x-6 gap-y-4">
-    <div class="col-span-2 mb-4">
-      <h3 class="text-xl font-medium text-gray-900 border-b pb-2"><%= form.object.new_record? ? "New Variant" : form.object.name %></h3>
+<div class="border border-neutral rounded-md p-4 my-8">
+  <div class="grid grid-cols-1 gap-x-6 gap-y-4">
+    <div class="col-span-2 mb-4 flex items-center justify-between">
+      <h3 class="text-2xl font-medium">
+        <%= form.object.new_record? ? "New Variant" : form.object.name %>
+      </h3>
+        <% unless form.object.new_record? %>
+          <div class="flex items-center gap-2">
+            <%= form.label :_destroy, "Mark for Deletion", class: "label cursor-pointer text-base" %>
+            <%= form.check_box :_destroy, class: "checkbox checkbox-error" %>
+          </div>
+        <% end %>
     </div>
 
-    <div class="form-control col-span-2 sm:col-span-1">
-        <%= form.label :active, class: "label cursor-pointer" %>
+    <fieldset class="fieldset">
+      <legend class="fieldset-legend text-xl font-medium">Status</legend>
+      <div class="grid grid-cols-2 gap-y-4 py-4">
+        <%= form.label :active, class: "label cursor-pointer text-base" %>
         <%= form.check_box :active, class: "toggle toggle-primary" %>
-    </div>
+      </div>
 
-    <div class="col-span-2 sm:col-span-1 flex items-center justify-end">
-      <% unless form.object.new_record? %>
-        <div class="form-control">
-          <%= form.label :_destroy, "Remove Variant", class: "label cursor-pointer" %>
-          <%= form.check_box :_destroy, class: "checkbox checkbox-error" %>
-        </div>
-      <% end %>
-    </div>
+      <div class="divider my-4"></div>
 
-    <div class="form-control col-span-2 sm:col-span-1">
-        <%= form.label :name, class: "label" %>
-        <%= form.text_field :name, class: "input input-bordered" %>
-    </div>
+      <legend class="fieldset-legend text-xl font-medium">Details</legend>
+      <div class="grid grid-cols-2 gap-y-4 py-4">
+        <%= form.label :name, "Name (required)", class: "label text-base" %>
+        <%= form.text_field :name, required: true, class: "input input-bordered" %>
 
-    <div class="form-control col-span-2 sm:col-span-1">
-        <%= form.label :sku, "SKU (required)", class: "label" %>
-        <%= form.text_field :sku, class: "input input-bordered" %>
-    </div>
+        <%= form.label :sku, "SKU (required)", class: "label text-base" %>
+        <%= form.text_field :sku, required: true, class: "input input-bordered" %>
 
-    <div class="form-control col-span-2 sm:col-span-1">
-        <%= form.label :price, class: "label" %>
-        <%= form.number_field :price, class: "input input-bordered", step: 0.01 %>
-    </div>
+        <%= form.label :price, "Price (required)", class: "label text-base" %>
+        <%= form.number_field :price, required: true, class: "input input-bordered", step: 0.01 %>
 
-    <div class="form-control col-span-2 sm:col-span-1">
-        <%= form.label :stock_quantity, class: "label" %>
-        <%= form.number_field :stock_quantity, class: "input input-bordered" %>
-    </div>
-
-    <div class="form-control col-span-2">
-        <%= form.label :image, class: "label" %>
+        <%= form.label :image, class: "label text-base" %>
         <%= form.file_field :image, class: "file-input file-input-bordered" %>
-    </div>
+      </div>
 
-    <div class="col-span-2 mt-4">
-      <h3 class="text-lg font-medium text-gray-900 border-b pb-2">Dimensions</h3>
-    </div>
+      <div class="divider my-4"></div>
 
-    <div class="form-control">
-        <%= form.label :width_in_mm, "Width (mm)", class: "label" %>
-        <%= form.number_field :width_in_mm, class: "input input-bordered" %>
-    </div>
-
-    <div class="form-control">
-        <%= form.label :height_in_mm, "Height (mm)", class: "label" %>
-        <%= form.number_field :height_in_mm, class: "input input-bordered" %>
-    </div>
-    
-    <div class="form-control">
-        <%= form.label :depth_in_mm, "Depth (mm)", class: "label" %>
-        <%= form.number_field :depth_in_mm, class: "input input-bordered" %>
-    </div>
-
-    <div class="form-control">
-        <%= form.label :weight_in_g, "Weight (g)", class: "label" %>
-        <%= form.number_field :weight_in_g, class: "input input-bordered" %>
-    </div>
-
-    <div class="form-control">
-        <%= form.label :volume_in_ml, "Volume (ml)", class: "label" %>
-        <%= form.number_field :volume_in_ml, class: "input input-bordered" %>
-    </div>
-
-    <div class="form-control">
-        <%= form.label :diameter_in_mm, "Diameter (mm)", class: "label" %>
+      <legend class="fieldset-legend text-xl font-medium">Dimensions</legend>
+      <div class="grid grid-cols-2 gap-y-4 py-4">
+        <%= form.label :diameter_in_mm, "Diameter (mm)", class: "label text-base" %>
         <%= form.number_field :diameter_in_mm, class: "input input-bordered" %>
-    </div>
+
+        <%= form.label :height_in_mm, "Height (mm)", class: "label text-base" %>
+        <%= form.number_field :height_in_mm, class: "input input-bordered" %>
+
+        <%= form.label :width_in_mm, "Width (mm)", class: "label text-base" %>
+        <%= form.number_field :width_in_mm, class: "input input-bordered" %>
+
+        <%= form.label :depth_in_mm, "Depth (mm)", class: "label text-base" %>
+        <%= form.number_field :depth_in_mm, class: "input input-bordered" %>
+
+        <%= form.label :weight_in_g, "Weight (g)", class: "label text-base" %>
+        <%= form.number_field :weight_in_g, class: "input input-bordered" %>
+
+        <%= form.label :volume_in_ml, "Volume (ml)", class: "label text-base" %>
+        <%= form.number_field :volume_in_ml, class: "input input-bordered" %>
+      </div>
+    </fieldset>
   </div>
 </div>
