--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -1,13 +1,53 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <style>
-      /* Email styles need to be inline */
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Afida</title>
+    <style type="text/css">
+      @import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600&display=swap');
+      body, table, td, a { -webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%; }
+      table, td { mso-table-lspace: 0pt; mso-table-rspace: 0pt; }
+      img { -ms-interpolation-mode: bicubic; border: 0; height: auto; line-height: 100%; outline: none; text-decoration: none; }
+      table { border-collapse: collapse !important; }
+      body { height: 100% !important; margin: 0 !important; padding: 0 !important; width: 100% !important; }
+      a[x-apple-data-detectors] {
+        color: inherit !important;
+        text-decoration: none !important;
+        font-size: inherit !important;
+        font-family: inherit !important;
+        font-weight: inherit !important;
+        line-height: inherit !important;
+      }
     </style>
   </head>
+  <body style="background-color: #f3f4f6; margin: 0 !important; padding: 40px 0 !important; font-family: 'Fredoka', sans-serif;">
+    <table border="0" cellpadding="0" cellspacing="0" width="100%">
+      <tr>
+        <td align="center">
+          <table border="0" cellpadding="0" cellspacing="0" width="600" style="background-color: #ffffff;">
+            <tr>
+              <td align="center" style="padding: 20px 0;">
+                <%= image_tag 'logo.png', width: '120', alt: 'Afida Logo', style: 'display: block; border: 0;' %>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <%= yield %>
+              </td>
+            </tr>
+          </table>
 
-  <body>
-    <%= yield %>
+          <table border="0" cellpadding="0" cellspacing="0" width="600">
+            <tr>
+              <td align="center" style="padding: 20px 30px; color: #6b7280; font-size: 12px;">
+                &copy; <%= Time.now.year %> Afida. All rights reserved.
+              </td>
+            </tr>
+          </table>
+
+        </td>
+      </tr>
+    </table>
   </body>
 </html>
