--- a/app/views/order_mailer/confirmation_email.html.erb
+++ b/app/views/order_mailer/confirmation_email.html.erb
@@ -6,12 +6,12 @@
         <strong>Order received, <%= @order.shipping_name %>!</strong>
         <br>
         <br>
-        We've got your goodies and we're packing them up with love and eco-friendly vibes. They'll be heading your way in no time.
+        We've got your goodies and we're packing them up with love. They'll be heading your way in no time.
         <br>
         <br>
         Your order number is <strong style="color: #111827;">#<%= @order.order_number %></strong>.
       </p>
-      <a href="<%= order_url(@order) %>" target="_blank" style="display: inline-block; background-color: #4f46e5; color: #ffffff; padding: 12px 30px; margin-top: 25px; border-radius: 8px; text-decoration: none; font-weight: 600;">
+      <a href="<%= order_url(@order) %>" target="_blank" style="display: inline-block; background-color: #76e9bf; color: #000000; padding: 12px 30px; margin-top: 25px; border-radius: 8px; text-decoration: none; font-weight: 500;">
         View Your Order
       </a>
     </td>
