Add welcome email

--- a/app/views/email_address_verifications/show.html.erb
+++ b/app/views/email_address_verifications/show.html.erb
@@ -10,7 +10,7 @@
     </p>
 
     <div class="mt-4 text-center w-full">
-      <%= link_to "Start shopping", shop_path, class: "btn btn-primary btn-lg w-full" %>
+      <%= link_to "Shop", shop_path, class: "btn btn-primary btn-lg w-full" %>
     </div>
 
     <div class="text-center w-full">
