--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -32,7 +32,7 @@
               </td>
             </tr>
             <tr>
-              <td>
+              <td style="padding: 20px 30px;" align="center">
                 <%= yield %>
               </td>
             </tr>
