--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -1,5 +1,21 @@
-<div class="navbar bg-neutral text-neutral-content">
-  <div class="text-sm font-bold text-center">
-    Free delivery on all mainland UK orders over £100 excl. VAT
+  <div class="bg-afida-green text-neutral text-xs py-2 font-mono font-bold grid grid-cols-2">
+    <div class="flex justify-start px-4 uppercase">
+      Free delivery on all mainland UK orders over £100 excl. VAT
+    </div>
+
+    <div class="flex justify-end px-4 gap-4">
+      <a class="flex items-center gap-2 font-bold text-center" href="tel:+442033027719">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M10.5 1.5H8.25A2.25 2.25 0 0 0 6 3.75v16.5a2.25 2.25 0 0 0 2.25 2.25h7.5A2.25 2.25 0 0 0 18 20.25V3.75a2.25 2.25 0 0 0-2.25-2.25H13.5m-3 0V3h3V1.5m-3 0h3m-3 18.75h3" />
+        </svg>
+        <span>0203 302 7719</span>
+      </a>
+
+      <a href="mailto:hello@afida.com" class="flex items-center gap-2 font-bold text-center">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-4">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M16.5 12a4.5 4.5 0 1 1-9 0 4.5 4.5 0 0 1 9 0Zm0 0c0 1.657 1.007 3 2.25 3S21 13.657 21 12a9 9 0 1 0-2.636 6.364M16.5 12V8.25" />
+        </svg>
+        <span>hello@afida.com</span>
+      </a>
+    </div>
   </div>
-</div>
