Show categories on /shop

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -69,91 +69,8 @@
   </div>
 </div>
 
-<div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-  <div class="card bg-base-100 shadow-md">
-    <figure>
-      <%= vite_image_tag "images/pizza-boxes.png", alt: "Pizza Boxes", class: "w-full" %>
-    </figure>
-    <div class="card-body">
-      <div class="flex flex-col items-center justify-center">
-        <h2 class="card-title text-2xl mb-2 text-center">Sustainable Pizza Boxes</h2>
-        <p class="text-neutral/70 mb-4">Made from 100% recycled materials</p>
-      </div>
-      <p></p>
-      <%= link_to "Shop Pizza Boxes", category_path("pizza-boxes"), class: "btn btn-primary w-full rounded-full text-lg" %>
-    </div>
-  </div>
+<%= render "categories/index" %>
 
-  <div class="card bg-base-100 shadow-md">
-    <figure>
-      <%= vite_image_tag "images/cold-cups.png", alt: "Cold Cups", class: "w-full" %>
-    </figure>
-    <div class="card-body">
-      <div class="flex flex-col items-center justify-center">
-        <h2 class="card-title text-2xl mb-2 text-center">Compostable Cold Cups</h2>
-        <p class="text-neutral/70 mb-4">Plant-based materials that break down naturally</p>
-      </div>
-      <p></p>
-      <%= link_to "Shop Cold Cups", category_path("cold-cups-and-lids"), class: "btn btn-primary w-full rounded-full text-lg" %>
-    </div>
-  </div>
-
-  <div class="card bg-base-100 shadow-md">
-    <figure>
-      <%= vite_image_tag "images/ice-cream-cups.png", alt: "Ice Cream Cups", class: "w-full" %>
-    </figure>
-    <div class="card-body">
-      <div class="flex flex-col items-center justify-center">
-        <h2 class="card-title text-2xl mb-2 text-center">Ice Cream Cups</h2>
-        <p class="text-neutral/70 mb-4">Made from 100% recycled materials</p>
-      </div>
-      <p></p>
-      <%= link_to "Shop Ice Cream Cups", category_path("ice-cream-cups"), class: "btn btn-primary w-full rounded-full text-lg" %>
-    </div>
-  </div>
-
-  <div class="card bg-base-100 shadow-md">
-    <figure>
-      <%= vite_image_tag "images/straws.png", alt: "Straws", class: "w-full" %>
-    </figure>
-    <div class="card-body">
-      <div class="flex flex-col items-center justify-center">
-        <h2 class="card-title text-2xl mb-2 text-center">Straws</h2>
-        <p class="text-neutral/70 mb-4">Made from 100% recycled materials</p>
-      </div>
-      <p></p>
-      <%= link_to "Shop Straws", category_path("straws"), class: "btn btn-primary w-full rounded-full text-lg" %>
-    </div>
-  </div>
-
-  <div class="card bg-base-100 shadow-md">
-    <figure>
-      <%= vite_image_tag "images/napkins.png", alt: "Napkins", class: "w-full" %>
-    </figure>
-    <div class="card-body">
-      <div class="flex flex-col items-center justify-center">
-        <h2 class="card-title text-2xl mb-2 text-center">Napkins</h2>
-        <p class="text-neutral/70 mb-4">Made from 100% recycled materials</p>
-      </div>
-      <p></p>
-      <%= link_to "Shop Napkins", category_path("napkins"), class: "btn btn-primary w-full rounded-full text-lg" %>
-    </div>
-  </div>
-
-  <div class="card bg-base-100 shadow-md">
-    <figure>
-      <%= vite_image_tag "images/hot-cups.png", alt: "Hot Cups", class: "w-full" %>
-    </figure>
-    <div class="card-body">
-      <div class="flex flex-col items-center justify-center">
-        <h2 class="card-title text-2xl mb-2 text-center">Hot Cups</h2>
-        <p class="text-neutral/70 mb-4">Made from 100% recycled materials</p>
-      </div>
-      <p></p>
-      <%= link_to "Shop Hot Cups", category_path("hot-cups"), class: "btn btn-primary w-full rounded-full text-lg" %>
-    </div>
-  </div>
-</div>
 
 <div class="divider divider-neutral mt-16">
   <h2 class="font-medium">Featured</h2>
