--- a/app/views/pages/shop.html.erb
+++ b/app/views/pages/shop.html.erb
@@ -1,3 +1,67 @@
-<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-  <%= render @products %>
+<div class="grid grid-cols-1 md:grid-cols-5 gap-8">
+  <div class="rounded-lg shadow-sm">
+    <figure>
+      <%= vite_image_tag "images/pizza-boxes.png", alt: "Pizza Boxes", class: "w-full rounded-t-lg" %>
+    </figure>
+    <div class="p-4 text-center">
+      <h2 class="text-xl mb-2">
+        Pizza Boxes
+      </h2>
+    </div>
+  </div>
+
+  <div class="rounded-lg shadow-sm">
+    <figure>
+      <%= vite_image_tag "images/cold-cups.png", alt: "Cold Cups", class: "w-full rounded-t-lg" %>
+    </figure>
+    <div class="p-4 text-center">
+      <h2 class="text-xl mb-2">
+        Cold Cups & Lids
+      </h2>
+    </div>
+  </div>
+
+  <div class="rounded-lg shadow-sm">
+    <figure>
+      <%= vite_image_tag "images/ice-cream-cups.png", alt: "Ice Cream Cups", class: "w-full rounded-t-lg" %>
+    </figure>
+    <div class="p-4 text-center">
+      <h2 class="text-xl mb-2">
+        Ice Cream Cups
+      </h2>
+    </div>
+  </div>
+
+  <div class="rounded-lg shadow-sm">
+    <figure>
+      <%= vite_image_tag "images/napkins.png", alt: "Napkins", class: "w-full rounded-t-lg" %>
+    </figure>
+    <div class="p-4 text-center">
+      <h2 class="text-xl mb-2">
+        Napkins
+      </h2>
+    </div>
+  </div>
+
+  <div class="rounded-lg shadow-sm">
+    <figure>
+      <%= vite_image_tag "images/hot-cups.png", alt: "Hot Cups", class: "w-full rounded-t-lg" %>
+    </figure>
+    <div class="p-4 text-center">
+      <h2 class="text-xl mb-2">
+        Hot Cups & Lids
+      </h2>
+    </div>
+  </div>
+
+  <div class="rounded-lg shadow-sm">
+    <figure>
+      <%= vite_image_tag "images/straws.png", alt: "Straws", class: "w-full rounded-t-lg" %>
+    </figure>
+    <div class="p-4 text-center">
+      <h2 class="text-xl mb-2">
+        Straws
+      </h2>
+    </div>
+  </div>
 </div>
