--- a/app/views/cart_items/_cart_item.html.erb
+++ b/app/views/cart_items/_cart_item.html.erb
@@ -2,8 +2,10 @@
   <div class="grid grid-cols-1 md:grid-cols-6 gap-4 items-center p-4 border-b hover:bg-gray-50">
     <div class="col-span-full md:col-span-2 flex items-center space-x-4">
       <%= link_to product_path(cart_item.product, variant_id: cart_item.product_variant.id), data: { turbo: false } do %>
-        <% if cart_item.product.image.attached? %>
+        <% if cart_item.product_variant.image.attached? %>
           <%= image_tag cart_item.product_variant.image, class: "w-20 h-20 object-cover rounded-md shadow", alt: cart_item.product_variant.display_name %>
+        <% elsif cart_item.product.image.attached? %>
+          <%= image_tag cart_item.product.image, class: "w-20 h-20 object-cover rounded-md shadow", alt: cart_item.product.name %>
         <% else %>
           <div class="w-20 h-20 bg-gray-200 rounded-md shadow flex items-center justify-center text-gray-500 text-xs">
             No Image
