--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -6,6 +6,30 @@
 <%= @product.description %>
 <% end %>
 
+<% content_for :head do %>
+  <!-- Twitter Card meta tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="<%= @product.name %>">
+  <meta name="twitter:description" content="<%= @product.description %>">
+  <% image_source = @selected_variant.image.attached? ? @selected_variant.image : @product.image %>
+  <% if image_source&.attached? %>
+    <meta name="twitter:image" content="<%= polymorphic_url(image_source.variant(resize_to_limit: [1200, 630])) %>">
+  <% end %>
+
+  <!-- Open Graph meta tags (also used by Twitter) -->
+  <meta property="og:type" content="product">
+  <meta property="og:title" content="<%= @product.name %>">
+  <meta property="og:description" content="<%= @product.description %>">
+  <meta property="og:url" content="<%= polymorphic_url(@product) %>">
+  <% if image_source&.attached? %>
+    <meta property="og:image" content="<%= polymorphic_url(image_source.variant(resize_to_limit: [1200, 630])) %>">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+  <% end %>
+  <meta property="product:price:amount" content="<%= @selected_variant.price %>">
+  <meta property="product:price:currency" content="USD">
+<% end %>
+
 <% content_for :breadcrumbs do %>
   <%= render "shared/breadcrumbs", product: @product %>
 <% end %>
