--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -16,15 +16,18 @@
     <meta name="twitter:image" content="<%= polymorphic_url(image_source.variant(resize_to_limit: [1200, 630])) %>">
   <% end %>
 
-  <!-- Open Graph meta tags (also used by Twitter) -->
-  <meta property="og:type" content="product">
+  <!-- Open Graph meta tags (also used by Twitter and WhatsApp) -->
+  <meta property="og:type" content="website">
   <meta property="og:title" content="<%= @product.name %>">
   <meta property="og:description" content="<%= @product.description %>">
   <meta property="og:url" content="<%= polymorphic_url(@product) %>">
+  <meta property="og:site_name" content="Afida">
   <% if image_source&.attached? %>
-    <meta property="og:image" content="<%= polymorphic_url(image_source.variant(resize_to_limit: [1200, 630])) %>">
-    <meta property="og:image:width" content="1200">
-    <meta property="og:image:height" content="630">
+    <meta property="og:image" itemprop="image" content="<%= polymorphic_url(image_source.variant(resize_to_limit: [800, 600], format: :jpg, quality: 85).processed) %>">
+    <meta property="og:image:width" content="800">
+    <meta property="og:image:height" content="600">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:alt" content="<%= @product.name %>">
   <% end %>
   <meta property="product:price:amount" content="<%= @selected_variant.price %>">
   <meta property="product:price:currency" content="USD">
